# factory-edge-agent

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
examples/: agent.toml
src/: config.rs  e2e.rs  lib.rs  main.rs  registry.rs
