[package]
name = "factory-edge-agent"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Runs a factory machine driver at the edge (on the box wired to the machine) and connects to factory-gateway over OPC-UA"
repository = "https://github.com/joeblew999/factory-edge-agent"

[[bin]]
name = "factory-edge-agent"
path = "src/main.rs"

[dependencies]
factory-machine-model = { git = "https://github.com/joeblew999/factory-machine-model" }
factory-howick-driver = { git = "https://github.com/joeblew999/factory-howick-driver" }
async-opcua = { version = "0.18", features = ["client"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
factory-gateway = { git = "https://github.com/joeblew999/factory-gateway" }
